# onping-permissions

./: .gitignore  LICENSE  README.md  config.yml  onping-permissions.cabal
src/Permissions/: Onping.hs
src/Permissions/Onping/: Graph.hs  Interface.hs  Internal.hs  Types.hs
test/Permissions/: OnpingSpec.hs
test/Permissions/Onping/: GraphSpec.hs  InternalSpec.hs
