Name:                   onping-permissions
Version:                0.1.0
Author:                 Scott Murphy <scottmurphy09@gmail.com>
Maintainer:             Scott Murphy <scottmurphy09@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Permissions.Onping
  Other-Modules:        Permissions.Onping.Internal
  Build-Depends:        base >= 4 && < 5

                      , persist-mongo-template >= 0.2.5
                       ,graphviz               >= 2999.16.0.0    
                       ,aeson
                       ,persistent
                       ,text
                       ,pretty                  
                       ,fgl                     
                       ,containers
                       ,warp
                       ,http-types
                       ,wai

  
Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
--  Location:             
